--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.3</version>
+        <version>3.1.5</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
     <groupId>de.unistuttgart.t2</groupId>
@@ -13,7 +13,7 @@
     <name>inventory</name>
     <description>inventory for T2-Project</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
@@ -42,13 +42,13 @@
         <!-- for openAPI and swagger -->
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>${SPRINGDOC_VERSION}</version>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${env.T2_SPRINGDOC_VERSION}</version>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-data-rest</artifactId>
-            <version>${SPRINGDOC_VERSION}</version>
+            <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+            <version>${env.T2_SPRINGDOC_VERSION}</version>
         </dependency>
 
 
@@ -56,51 +56,51 @@
         <dependency>
             <groupId>io.eventuate.tram.core</groupId>
             <artifactId>eventuate-tram-spring-events</artifactId>
-            <version>${TRAM_VERSION}</version>
+            <version>${env.T2_TRAM_VERSION}</version>
         </dependency>
         <dependency>
             <groupId>io.eventuate.tram.core</groupId>
             <artifactId>eventuate-tram-spring-commands</artifactId>
-            <version>${TRAM_VERSION}</version>
+            <version>${env.T2_TRAM_VERSION}</version>
         </dependency>
         <dependency>
             <groupId>io.eventuate.tram.core</groupId>
             <artifactId>eventuate-tram-spring-messaging</artifactId>
-            <version>${TRAM_VERSION}</version>
+            <version>${env.T2_TRAM_VERSION}</version>
         </dependency>
         <dependency>
             <groupId>io.eventuate.tram.sagas</groupId>
             <artifactId>eventuate-tram-sagas-spring-participant</artifactId>
-            <version>${TRAM_PARTICIPANT_VERSION}</version>
+            <version>${env.T2_TRAM_PARTICIPANT_VERSION}</version>
         </dependency>
 
         <!-- FOR THE CDC -->
         <dependency>
             <groupId>io.eventuate.tram.core</groupId>
             <artifactId>eventuate-tram-spring-producer-jdbc</artifactId>
-            <version>${TRAM_VERSION}</version>
+            <version>${env.T2_TRAM_VERSION}</version>
         </dependency>
         <dependency>
             <groupId>io.eventuate.tram.core</groupId>
             <artifactId>eventuate-tram-spring-consumer-jdbc</artifactId>
-            <version>${TRAM_VERSION}</version>
+            <version>${env.T2_TRAM_VERSION}</version>
         </dependency>
         <dependency>
             <groupId>io.eventuate.tram.core</groupId>
             <artifactId>eventuate-tram-spring-consumer-kafka</artifactId>
-            <version>${TRAM_VERSION}</version>
+            <version>${env.T2_TRAM_VERSION}</version>
         </dependency>
         <dependency>
             <groupId>io.eventuate.tram.core</groupId>
             <artifactId>eventuate-tram-spring-optimistic-locking</artifactId>
-            <version>${TRAM_VERSION}</version>
+            <version>${env.T2_TRAM_VERSION}</version>
         </dependency>
 
         <!-- t2 common things -->
         <dependency>
             <groupId>de.unistuttgart.t2</groupId>
             <artifactId>common</artifactId>
-            <version>${T2_COMMON_VERSION}</version>
+            <version>${env.T2_COMMON_VERSION}</version>
         </dependency>
 
         <!-- embedded database for unit tests -->
@@ -114,7 +114,7 @@
         <dependency>
             <groupId>io.opentracing.contrib</groupId>
             <artifactId>opentracing-spring-jaeger-cloud-starter</artifactId>
-            <version>${JAEGER_VERSION}</version>
+            <version>${env.T2_JAEGER_VERSION}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -123,10 +123,21 @@
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>${env.T2_MICROMETER_VERSION}</version>
         </dependency>
     </dependencies>
 
     <build>
+        <!-- Enable resource filtering to be able to get the project version as an env var-->
+        <resources>
+            <resource>
+                <directory>${basedir}/src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/application*.properties</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -135,7 +146,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${JACOCO_VERSION}</version>
+                <version>${env.T2_JACOCO_VERSION}</version>
                 <executions>
                     <execution>
                         <goals>
