--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 ### INVENTORY ##
 
+info.app.version='@project.version@'
+
 # generates table for domain data 
 spring.jpa.generate-ddl=true
 
@@ -14,17 +16,17 @@ eventuatelocal.zookeeper.connection.string=${EVENTUATELOCAL_ZOOKEEPER_CONNECTION
 spring.data.mongodb.uri=mongodb://${MONGO_HOST}:27017/data
 
 ## size as integer
-t2.inventory.size=${INVENTORY_SIZE}
+t2.inventory.size=${T2_INVENTORY_SIZE}
 t2.inventory.TTL=${T2_INVENTORY_TTL}
-t2.inventory.taskRate=${T2_INVENTORY_TASKRATE} 
+t2.inventory.taskRate=${T2_INVENTORY_TASKRATE}
 
 ## set to 'nosaga' to run application without additional things.
 ## set to 'saga' to run application with cdc and jpa and everything.
 spring.profiles.active=${SPRING_PROFILES_ACTIVE}
 
-opentracing.jaeger.service-name=${JAEGER_SERVICE_NAME}
-opentracing.jaeger.enabled=${JAEGER_ENABLE}
-opentracing.jaeger.udp-sender.host=${JAEGER_HOST}
+opentracing.jaeger.service-name=inventory
+opentracing.jaeger.enabled=${T2_JAEGER_ENABLED}
+opentracing.jaeger.udp-sender.host=${T2_JAEGER_HOST}
 
 management.endpoints.web.exposure.include: prometheus, health
 management.endpoints.health.show-details: always
@@ -32,7 +34,7 @@ management.endpoints.health.show-details: always
 management.metrics.tags.application: inventory
 management.metrics.distribution.percentiles.all: 0.5, 0.75, 0.95, 0.98, 0.99, 0.999, 1.0
 
-management.health.probes.enabled: true
+management.endpoint.health.probes.enabled: true
 management.health.livenessState.enabled: true
 management.health.readinessState.enabled: true
 
